working on new website index and sign in pages
Former-commit-id: db2c6e9e8e742bbe969d2bc1fe46cf3a38e32d14 [formerly 9588c387a827a2d1baf5d547e2f7ba8f62ce40c6] [formerly af13e168e569dfcbbd914e771c7b0d03798c7d52 [formerly 56f8571cb5622bf280a65765cf608802b56a9cd0]]
Former-commit-id: 13120317a7fcdec166a8757f136576d7e52a4b93 [formerly 44f3fe283fd1ee5b929197c58d89f30e5af7d8b4]
Former-commit-id: 44ddb25fdee1fe109b826080c2163e4213f2f195

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0029)https://www.google.com/drive/ -->
 <html class=" google-js js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <script type="text/javascript" async="" src="./google_drive_files/ga.js"></script><script>
+    <script type="text/javascript" async="" src="/static/new_web_site/google_drive_files/ga.js"></script><script>
 (function(H){H.className=H.className.replace(/\bgoogle\b/,'google-js')})(document.documentElement)
     </script>
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -13,9 +13,9 @@
     <meta content="//www.google.com/drive/images/drive/logo-drive.png" property="og:image">
     <meta content="Get access to files anywhere through secure cloud storage and file backup for your photos, videos, files and more with Google Drive." property="og:description">
     <title>
-      ioGrow - Discover new customers, Close more deals and Grow faster
+      ioGrow - Discover new customers, Get organized and Grow your Business
     </title>
-    <script src="./google_drive_files/google.js">
+    <script src="/static/new_web_site/google_drive_files/google.js">
 </script>
     <script>
 var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCopy","/apps/"]);_gaq.push(["_cookiePathCopy","/work/"]);_gaq.push(["_cookiePathCopy","/work/apps/business/"]);_gaq.push(["_cookiePathCopy","/intl/"]);_gaq.push(["_cookiePathCopy","/intx/"]);_gaq.push(["_cookiePathCopy","/work/"]);new gweb.analytics.AutoTrack({profile:"UA-28613865-1"});
@@ -23,43 +23,46 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
     <meta content="D93199779C0B5EE436644DE888FCC272" name="msvalidate.01">
     <link href="https://plus.google.com/+GoogleDrive/" rel="publisher">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
-    <link href="./google_drive_files/google_drive.html" rel="canonical">
+    <link href="/static/new_web_site/google_drive_files/google_drive.html" rel="canonical">
     <link href="https://www.google.com/drive/css/site.min.css" rel="stylesheet">
-    <script src="./google_drive_files/modernizr.js">
+    <script src="/static/new_web_site/google_drive_files/modernizr.js">
 </script>
     <link href="https://www.google.com/drive/images/drive/favicon.ico" rel="shortcut icon">
+    <style type="text/css">
+    .heading{
+      font-size: 48px;
+    }
+    .section-intro .one-whole img, .section-download .one-whole img {
+      height: 125px;
+      margin: 0 auto 20px auto;
+      }
+    </style>
   </head>
   <body class="index nav-light">
     <header class="header" role="banner">
       <div class="header-item with-site-logo">
         <a class="site-logo site-logo-link" data-g-action="Header" data-g-action="Header" data-g-event="Drive"
         data-g-label="Drive logo" href="../drive/">
-        <div class="site-logo-image icon" style="font-size: 42px;
-font-weight: bold;">
-          i/oGrow
-        </div></a>
+        <img src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" height="50"></a>
       </div>
       <nav class="nav-site" data-nav-name="mobile">
-        <img alt="Drive logo" src="./google_drive_files/logo-drive.png">
+        <img alt="Drive logo" src="/static/new_web_site/google_drive_files/logo-drive.png">
         <ul>
           <li>
-            <a class="meet" data-g-action="Header" data-g-event="Drive" data-g-label="Meet Drive" href="./google_drive_files/google_drive.html">Meet ioGrow</a>
+            <a class="meet" data-g-action="Header" data-g-event="Drive" data-g-label="Meet Drive" href="/static/new_web_site/google_drive_files/google_drive.html">Getting started with ioGrow</a>
           </li>
           <li>
-            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://www.google.com/drive/using-drive/">Using ioGrow</a>
+            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://www.google.com/drive/using-drive/">Download Chrome Extension</a>
           </li>
           <li class="mobile-is-hidden device-is-hidden">
-            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="https://www.google.com/drive/download/">Download</a>
+            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="https://www.google.com/drive/download/">Pricing</a>
           </li>
           <li>
-            <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="https://www.google.com/intx/en/work/apps/business/driveforwork/?utm_medium=et&utm_source=aboutdrive&utm_campaign=en&utm_content=consnav">
-            For Work</a>
-          </li>
-          <li class="last-default">
-            <a class="help" data-g-action="Header" data-g-event="Drive" data-g-label="Help" href="https://support.google.com/drive/?hl=en">Help</a>
+            <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/new-sign-in/">
+            Sign-in</a>
           </li>
           <li class="mobile-is-hidden float-in">
-            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F">
+            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/new-sing-in/">
             Go to ioGrow</a>
           </li>
           <li class="download-app mobile-is-visible crushed-is-visible">
@@ -79,14 +82,14 @@ font-weight: bold;">
       <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="images/home/intro.jpg" style="height: 882px; background-image: url(https://www.google.com/drive/images/home/intro-1600.jpg);"></div>
       <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -133.5px; opacity: 1;">
         <div class="one-whole">
-          
-          <h1 class="section-headline section-headline-large section-headline-white">
-            Be more organized <br> Get new customers  <br> Grow faster
-          </h1><a class="maia-button button-download mobile-is-hidden get-started" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F">Go to ioGrow</a>
+          <img alt="Drive logo logo-heading" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
+          <h1 class="section-headline section-headline-large section-headline-white heading">
+            Discover new cusotmers, Get organized and Grow your Business
+          </h1><a class="maia-button button-download mobile-is-hidden get-started" href="/new-sign-in/">Go to ioGrow</a>
           <div class="mobile-is-visible mobile-button-selector">
             <a class="maia-button button-download download-mobile-android" href="https://play.google.com/store/apps/details?id=com.google.android.apps.docs&hl=en">Download
             Google Drive</a> <a class="maia-button button-download download-mobile-ios" href="https://itunes.apple.com/en/app/google-drive/id507874739">Download Google Drive</a>
-            <a class="maia-button button-download download-mobile get-started" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F" style="display: inline-block;">
+            <a class="maia-button button-download download-mobile get-started" href="/new-sign-in/" style="display: inline-block;">
             Go to ioGrow</a>
           </div>
         </div>
@@ -173,235 +176,38 @@ font-weight: bold;">
     <div class="maia-footer" id="maia-footer">
       <div id="maia-footer-global">
         <div class="maia-aux">
-          <div class="maia-locales">
-            <label><span>Change language:</span> <select onchange="var href=this[this.selectedIndex].value;if(href!=&#39;&#39;){window.location.href=href};">
-              <option value="//www.google.com/intl/af/drive/">
-                Afrikaans
-              </option>
-              <option value="//www.google.com/intl/az/drive/">
-                Azərbaycanca
-              </option>
-              <option value="//www.google.com/intl/id/drive/">
-                Bahasa Indonesia
-              </option>
-              <option value="//www.google.com/intl/ms/drive/">
-                Bahasa Melayu
-              </option>
-              <option value="//www.google.com/intl/ca/drive/">
-                Català
-              </option>
-              <option value="//www.google.com/intl/cs/drive/">
-                Čeština
-              </option>
-              <option value="//www.google.com/intl/da/drive/">
-                Dansk
-              </option>
-              <option value="//www.google.com/intl/de/drive/">
-                Deutsch
-              </option>
-              <option value="//www.google.com/intl/et/drive/">
-                Eesti
-              </option>
-              <option selected="" value="//www.google.com/intl/en/drive/">
-                English
-              </option>
-              <option value="//www.google.com/intl/en-GB/drive/">
-                English (United Kingdom)
-              </option>
-              <option value="//www.google.com/intl/es/drive/">
-                Español
-              </option>
-              <option value="//www.google.com/intl/es-419/drive/">
-                Español (Latinoamérica)
-              </option>
-              <option value="//www.google.com/intl/eu/drive/">
-                Euskara
-              </option>
-              <option value="//www.google.com/intl/fil/drive/">
-                Filipino
-              </option>
-              <option value="//www.google.com/intl/fr/drive/">
-                Français
-              </option>
-              <option value="//www.google.com/intl/fr-CA/drive/">
-                Français (Canada)
-              </option>
-              <option value="//www.google.com/intl/gl/drive/">
-                Galego
-              </option>
-              <option value="//www.google.com/intl/hr/drive/">
-                Hrvatski
-              </option>
-              <option value="//www.google.com/intl/zu/drive/">
-                Isizulu
-              </option>
-              <option value="//www.google.com/intl/is/drive/">
-                Íslenska
-              </option>
-              <option value="//www.google.com/intl/it/drive/">
-                Italiano
-              </option>
-              <option value="//www.google.com/intl/sw/drive/">
-                Kiswahili
-              </option>
-              <option value="//www.google.com/intl/lv/drive/">
-                Latviešu
-              </option>
-              <option value="//www.google.com/intl/lt/drive/">
-                Lietuvių
-              </option>
-              <option value="//www.google.com/intl/hu/drive/">
-                Magyar
-              </option>
-              <option value="//www.google.com/intl/nl/drive/">
-                Nederlands
-              </option>
-              <option value="//www.google.com/intl/no/drive/">
-                Norsk
-              </option>
-              <option value="//www.google.com/intl/pl/drive/">
-                Polski
-              </option>
-              <option value="//www.google.com/intl/pt-BR/drive/">
-                Português (Brasil)
-              </option>
-              <option value="//www.google.com/intl/pt-PT/drive/">
-                Português (Portugal)
-              </option>
-              <option value="//www.google.com/intl/ro/drive/">
-                Română
-              </option>
-              <option value="//www.google.com/intl/sk/drive/">
-                Slovenčina
-              </option>
-              <option value="//www.google.com/intl/sl/drive/">
-                Slovenščina
-              </option>
-              <option value="//www.google.com/intl/fi/drive/">
-                Suomi
-              </option>
-              <option value="//www.google.com/intl/sv/drive/">
-                Svenska
-              </option>
-              <option value="//www.google.com/intl/vi/drive/">
-                Tiếng Việt
-              </option>
-              <option value="//www.google.com/intl/tr/drive/">
-                Türkçe
-              </option>
-              <option value="//www.google.com/intl/el/drive/">
-                Ελληνικά
-              </option>
-              <option value="//www.google.com/intl/bg/drive/">
-                Български
-              </option>
-              <option value="//www.google.com/intl/mn/drive/">
-                Монгол
-              </option>
-              <option value="//www.google.com/intl/ru/drive/">
-                Русский
-              </option>
-              <option value="//www.google.com/intl/sr/drive/">
-                Српски
-              </option>
-              <option value="//www.google.com/intl/uk/drive/">
-                Українська
-              </option>
-              <option value="//www.google.com/intl/ka/drive/">
-                ქართული
-              </option>
-              <option value="//www.google.com/intl/hy/drive/">
-                Հայերեն
-              </option>
-              <option value="//www.google.com/intl/iw/drive/">
-                ‫עברית‬
-              </option>
-              <option value="//www.google.com/intl/ur/drive/">
-                ‫اردو‬
-              </option>
-              <option value="//www.google.com/intl/ar/drive/">
-                ‫العربية‬
-              </option>
-              <option value="//www.google.com/intl/fa/drive/">
-                ‫فارسی‬
-              </option>
-              <option value="//www.google.com/intl/am/drive/">
-                አማርኛ
-              </option>
-              <option value="//www.google.com/intl/ne/drive/">
-                नेपाली
-              </option>
-              <option value="//www.google.com/intl/mr/drive/">
-                मराठी
-              </option>
-              <option value="//www.google.com/intl/hi/drive/">
-                हिन्दी
-              </option>
-              <option value="//www.google.com/intl/bn/drive/">
-                বাংলা
-              </option>
-              <option value="//www.google.com/intl/gu/drive/">
-                ગુજરાતી
-              </option>
-              <option value="//www.google.com/intl/ta/drive/">
-                தமிழ்
-              </option>
-              <option value="//www.google.com/intl/te/drive/">
-                తెలుగు
-              </option>
-              <option value="//www.google.com/intl/kn/drive/">
-                ಕನ್ನಡ
-              </option>
-              <option value="//www.google.com/intl/ml/drive/">
-                മലയാളം
-              </option>
-              <option value="//www.google.com/intl/si/drive/">
-                සිංහල
-              </option>
-              <option value="//www.google.com/intl/th/drive/">
-                ไทย
-              </option>
-              <option value="//www.google.com/intl/lo/drive/">
-                ລາວ
-              </option>
-              <option value="//www.google.com/intl/km/drive/">
-                ខ្មែរ
-              </option>
-              <option value="//www.google.com/intl/ko/drive/">
-                한국어
-              </option>
-              <option value="//www.google.com/intl/zh-HK/drive/">
-                中文 (香港)
-              </option>
-              <option value="//www.google.com/intl/zh-CN/drive/">
-                中文（简体中文）
-              </option>
-              <option value="//www.google.com/intl/zh-TW/drive/">
-                中文（繁體中文）
-              </option>
-              <option value="//www.google.com/intl/ja/drive/">
-                日本語
-              </option>
-            </select></label>
-          </div>
           <ul>
+          <li>
+            800 West El Camino Real,
+Suite 180, Mountain View,
+California, 94040,
+          </li>
             <li>
-              <a href="http://www.google.com/">Google</a>
+            
+                 <a href="mailto:contact@iogrow.com">Email us</a>, or join us on Twitter <a href="#">@ioGrow</a>, <a href="#">Facebook</a>
+            
+            </li>
+           
+            <li>
+              <a href="#">ioGrow Blog</a>
             </li>
             <li>
-              <a href="https://www.google.com/about/">About Google</a>
+              <a href="#">Terms of service</a>
             </li>
             <li>
-              <a href="https://www.google.com/policies/">Privacy &amp; Terms</a>
+              <a href="#">Privacy policy</a>
+            </li>
+            <li>
+              <a href="#">Security information</a>
             </li>
           </ul>
         </div>
       </div>
     </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="./google_drive_files/TweenMax.min.js">
-</script> <script src="./google_drive_files/morlock.min.js">
-</script> <script src="./google_drive_files/drive-site.min.js">
+    <script src="/static/new_web_site/google_drive_files/TweenMax.min.js">
+</script> <script src="/static/new_web_site/google_drive_files/morlock.min.js">
+</script> <script src="/static/new_web_site/google_drive_files/drive-site.min.js">
 </script> <script>
 var manageParams = new drive.QueryParamManager();
     </script> <script>
