--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -52,17 +52,17 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
             <a class="meet" data-g-action="Header" data-g-event="Drive" data-g-label="Meet Drive" href="/static/new_web_site/google_drive_files/google_drive.html">Getting started with ioGrow</a>
           </li>
           <li>
-            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="https://www.google.com/drive/using-drive/">Download Chrome Extension</a>
+            <a class="using-drive" data-g-action="Header" data-g-event="Drive" data-g-label="Using Drive" href="/chrome-extension/">Install Chrome Extension</a>
           </li>
           <li class="mobile-is-hidden device-is-hidden">
-            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="https://www.google.com/drive/download/">Pricing</a>
+            <a class="download" data-g-action="Header" data-g-event="Drive" data-g-label="Download" href="/new/#pricing">Pricing</a>
           </li>
           <li>
             <a class="work" data-g-action="Header" data-g-event="Drive" data-g-label="For Work" href="/new-sign-in/">
             Sign-in</a>
           </li>
           <li class="mobile-is-hidden float-in">
-            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/new-sing-in/">
+            <a class="go-to-drive get-started" data-g-action="Header" data-g-event="Drive" data-g-label="Go to ioGrow" href="/new-sign-in/">
             Go to ioGrow</a>
           </li>
           <li class="download-app mobile-is-visible crushed-is-visible">
@@ -95,7 +95,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
         </div>
       </div>
       <div class="arrow-hint">
-        <a class="gweb-smoothscroll-control" href="https://www.google.com/drive/#start">
+        <a class="gweb-smoothscroll-control" href="/new/#start">
         <div class="icon icon-arrow-hint animated-arrow-1"></div>
         <div class="icon icon-arrow-hint animated-arrow-2"></div></a>
       </div>
@@ -161,11 +161,15 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
       </div>
       <section class="section-download section-panel-fullscreen js-hinted-fullscreen" style="height: 600px;">
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
-          <div class="one-whole">
+          <div class="one-whole" id="pricing">
+
             <h1 class="section-headline section-headline-large section-headline-gray heading-headline">
-              Get started with ioGrow <br> it’s free for 30 days
-            </h1><a class="maia-button button-download mobile-is-hidden get-started" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F">Go
-            to ioGrow</a>
+              $30 per user per month <br>
+              Get started with ioGrow <br> it’s free for 30 days <br>
+
+            </h1>
+            <a class="maia-button button-download download-mobile get-started" href="/new-sign-in/" style="display: inline-block;">
+            Start your free trial</a>
           </div>
         </div>
       </section>
